# axum-web

./: README.md
.devcontainer/: .env  Dockerfile
app/: Cargo.toml
app/db/: schema.sql
app/db/migrations/: 20230904042838_create_users_table.sql
app/src/: config.rs  error.rs  main.rs
app/src/models/: user.rs
