[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tokio = { version = "1.31.0", default-features = false, features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.0", default-features = false,  features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
